# Gazebo-ICub-installer

./: README.md
install/: install.sh
install/icub-gazebo/icub_fixed/: icub_fixed.sdf
install/icub-gazebo/icub_with_hands/: icub_with_hands.sdf
install/icub-gazebo/table/: table.sdf
install/icub-gazebo/table/meshes/: table.stl
install/icub-gazebo/worlds/: icub_fixed_light.world
run/: manage_sim.sh
test_objects/: .cpp_sources  .tags  CMakeLists.txt  delete_objects.cpp  test_objects.cpp
