CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)

SET(PROJECTNAME  test_objects)
PROJECT(${PROJECTNAME})

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -std=c++11 -O2")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11 -ggdb3 -O0")

FIND_PACKAGE(YARP REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${YARP_MODULE_PATH})

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})

LINK_DIRECTORIES(${YARP_LINK_DIRECTORIES})
LINK_LIBRARIES(${YARP_LIBS})
					
MESSAGE("project:" ${PROJECTNAME} )



set (SOURCES 
      test_objects.cpp 
)

set (DELETE_SOURCES 
      delete_objects.cpp 
)



set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(AUTOGEN_TARGETS_FOLDER ${CMAKE_BUILD_FILES_DIRECTORY})

ADD_EXECUTABLE(test_objects ${SOURCES})
TARGET_LINK_LIBRARIES(test_objects ${YARP_LIBRARIES})

ADD_EXECUTABLE(delete_objects ${DELETE_SOURCES})
TARGET_LINK_LIBRARIES(delete_objects ${YARP_LIBRARIES})


